# tasks-manager-app

./: README.md  pyproject.toml
backend/backend/: settings.py  urls.py
backend/todo/: admin.py  serializers.py  views.py
backend/todo/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: Modal.js
